[package]
name = "game"
version = "0.1.0"
authors = ["Ben Luelo <benluelo@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
noise = "0.7.0"
pathfinding = "2.1.1"
petgraph = "0.5.1"
ansi_term = "0.12"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
rayon = "1.5.0"
rmp-serde = "0.15.4"
gif = "0.11.2"
itertools = "0.10.0"
derive_more = "0.99.13"
num-traits = "0.2.14"
num = "0.4.0"
static_assertions = "1.1.0"
image = "0.23.14"

[dev-dependencies]
serde_test = "1.0.125"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench_dungeon"
harness = false
[[bench]]
name = "bench_get_adjacent_walls"
harness = false

[profile.bench]
debug = true
