[package]
name = "bevy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.5.0", features = ["dynamic", "png"] }
#  }
rand = "0.8.4"
dungeon = { path = "../dungeon" }
num-traits = "0.2.14"
