[package]
name = "bounded_int"
version = "0.1.0"
authors = ["Ben Luelo <benluelo@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
num-traits = "0.2.14"
num = "0.4.0"
