[package]
name = "dungeon"
version = "0.1.0"
authors = ["Ben Luelo <benluelo@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.3"
noise = "0.7.0"
pathfinding = "2.1.1"
petgraph = "0.5.1"
serde = { version = "1.0.125", features = ["derive"] }
serde_derive = "1.0.125"
serde_json = "1.0.64"
rayon = "1.5.0"
gif = "0.11.2"
itertools = "0.10.0"
num-traits = "0.2.14"
num = "0.4.0"
image = "0.23.14"
bounded_int = { path = "../bounded_int" }

[dev-dependencies]
serde_test = "1.0.125"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench_dungeon"
harness = false

# [[bench]]
# name = "bench_get_adjacent_walls"
# harness = false
[[bin]]
name = "test_bin"
